--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT = 4000
 CONNECTION_STRING = "mongodb+srv://ritesh:123@bigbang.7up4zm0.mongodb.net/?retryWrites=true/airlines"
+
+//Log Settigs
+ 
+ INFO_LOGGING = false
+ ERROR_LOGGING = false
