--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "mongoose": "^5.6.10"
+    "mongoose": "^5.6.10",
+    "uuid": "^9.0.0"
   }
 }
